07_retirement/grade.txt
Grading at Mon Jan 28 20:34:28 UTC 2019
Attempting to compile retirement.c
retirement.c:43:9: error: return type of ‘main’ is not ‘int’ [-Werror=main]
   void  main (){
         ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
